kubernetes/postgresql/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: postgresql
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`postgresql.skippythesnake.com`)
      kind: Rule
      services:
        - name: postgresql
          port: 80
